[project]
name = "types-elmclient"
version = "0.1.0"
description = "Unofficial type stubs for the elmclient Python package"
authors = [{ name = "Andreas Specker", email = "andreas.specker@datendeuter.de" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

[tool.mypy]
mypy_path = "elmclient"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_ignores = true